Fix x-overflow on Safari

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -11,7 +11,7 @@
 		transform: translate3d(0,-320px,0);
 	}
 }
-body {
+html, body {
 	overflow-x: hidden;
 }
 .loader {
